--- a/games.html
+++ b/games.html
@@ -75,7 +75,7 @@
 									<p>Letak penerangan di sini.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<img src="images/games/logos/minecraft-logo.png" style="height: 150px;"/>
+									<img src="images/games/logos/minecraft-logo.png" style="height: 75px; margin: 37.5px 0 37.5px 0;"/>
 									<h3>Minecraft</h3>
 									<p>Letak penerangan di sini.</p>
 								</section>
@@ -90,8 +90,8 @@
 									<p>Letak penerangan di sini.</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<img src="images/games/logos/dota2-logo.png" style="height: 150px;"/>
-									<h3>Dota 2</h3>
+									<img src="images/games/logos/valheim-logo.png" style="height: 150px;"/>
+									<h3>Valheim</h3>
 									<p>Letak penerangan di sini.</p>
 								</section>
 							</div>
