--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<ul>
 							<li><a href="https://otaxgaming.com/">Home</a></li>
 							<li><a href="https://otaxgaming.com/games">Games</a></li>
-							<!--<li><a href="elements.html">Elements</a></li>-->
+							<li><a href="https://otaxgaming.com/movies">Movies</a></li>
 							<li><a href="https://otaxgaming.com/discord" class="button primary">Discord</a></li>
 						</ul>
 					</nav>
@@ -104,7 +104,7 @@
 						</header>
 						<p>Saya lagi tak tahu nak letak isi apa sini. MANA GAR.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Contoh Filem</a></li>
+							<li><a href="https://otaxgaming.com/movies" class="button">Movies</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
