Updated close to public release

--- a/games.html
+++ b/games.html
@@ -34,7 +34,7 @@
 						<ul>
 							<li><a href="https://otaxgaming.com/">Home</a></li>
 							<li><a href="https://otaxgaming.com/games">Games</a></li>
-							<li><a href="https://otaxgaming.com/movies">Movies</a></li>
+							<li><a href="https://otaxgaming.com/#">Movies</a></li>
 							<li><a href="https://otaxgaming.com/discord" class="button primary">Discord</a></li>
 						</ul>
 					</nav>
@@ -45,54 +45,55 @@
 					<div class="container">
 						<header class="major">
 							<h2>Games</h2>
-							<p>Link ke permainan yang dimainkan oleh Otax Gaming boleh didapati di bawah</p>
+							<p>Senarai game yang dimainkan oleh komuniti boleh didapati di bawah. Beberapa game boleh diklik untuk ke page sendiri (tetapi buat waktu ni akan ke link YouTube video).</p>
 						</header>
 						<div class="box alt">
 							<div class="row gtr-uniform">
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<img src="images/games/logos/mhrise-logo.png" style="height: 150px;"/>
-									<h3>Monster Hunter World/Rise</h3>
+									<a href="https://clips.twitch.tv/ObedientCloudyPizzaDBstyle"><img src="images/games/logos/mhrise-logo.png" style="height: 150px;"/>
+									<h3>Monster Hunter World/Rise</h3></a>
 									<p>"Ada segolongan orang yang menunggu Rise keluar kat PC tahun depan." - Pidot</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<img src="images/games/logos/amongus-logo.png" style="height: 150px;"/>
-									<h3>Among Us</h3>
+									<a href="https://clips.twitch.tv/BillowingDaintyWerewolfHumbleLife"><img src="images/games/logos/amongus-logo.png" style="height: 150px;"/>
+									<h3>Among Us</h3></a>
 									<p>"Menipu antara satu sama sendiri." - Pidot</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<img src="images/games/logos/insurgencysandstorm-logo.png" style="height: 100px; margin: 25px 0 25px 0;"/>
-									<h3>Insurgency: Sandstorm</h3>
-									<p>Letak penerangan di sini.</p>
+									<a href="https://clips.twitch.tv/YawningKawaiiBananaPicoMause-B2EH0XRiu9pchery"><img src="images/games/logos/insurgencysandstorm-logo.png" style="height: 100px; margin: 25px 0 25px 0;"/>
+									<h3>Insurgency: Sandstorm</h3></a>
+									<p>"Siapa lagi nak bunuh kita kalau bukan kawan sendiri?" - Jack</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<img src="images/games/logos/phasmophobia-logo.png" style="height: 75px; margin: 37.5px 0 37.5px 0;"/>
-									<h3>Phasmophobia</h3>
-									<p>Letak penerangan di sini.</p>
+									<a href="https://www.twitch.tv/videos/817829004"><img src="images/games/logos/phasmophobia-logo.png" style="height: 75px; margin: 37.5px 0 37.5px 0;"/>
+									<h3>Phasmophobia</h3></a>
+									<p>"Jangan risau hantu tu tak faham BM."</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<img src="images/games/logos/deadbydaylight-logo.png" style="height: 150px;"/>
 									<h3>Dead by Daylight</h3>
-									<p>Letak penerangan di sini.</p>
+									<p>"Tujuan game ni baiki generator ke?" - Yoy</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<img src="images/games/logos/minecraft-logo.png" style="height: 75px; margin: 37.5px 0 37.5px 0;"/>
-									<h3>Minecraft</h3>
-									<p>Letak penerangan di sini.</p>
+									<a href="https://youtu.be/fa0vyRJQJow"><img src="images/games/logos/minecraft-logo.png" style="height: 75px; margin: 37.5px 0 37.5px 0;"/>
+									<h3>Minecraft</h3></a>
+									<p>"Jangan lupa bawa katil waktu nak ke Nether tau."</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<img src="images/games/logos/valorant-logo.png" style="height: 150px;"/>
 									<h3>Valorant</h3>
-									<p>Letak penerangan di sini.</p>
+									<p>"Hidupkan aku Jett!"</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<img src="images/games/logos/l4d2-logo.png" style="height: 150px;"/>
-									<h3>Left 4 Dead 2</h3>
-									<p>Letak penerangan di sini.</p>
+									<a href="https://streamable.com/uf9q4u"><img src="images/games/logos/l4d2-logo.png" style="height: 150px;"/>
+									<h3>Left 4 Dead 2</h3></a>
+									<p>"Kalau aku tak nampak witch tu, witch tu pun tak nampak aku."</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<img src="images/games/logos/valheim-logo.png" style="height: 150px;"/>
 									<h3>Valheim</h3>
-									<p>Letak penerangan di sini.</p>
+									<p>"Gemuruh jiwa semangat membara<br>
+									Dari puncak ingin ke angkasa"</p>
 								</section>
 							</div>
 						</div>
