--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<ul>
 							<li><a href="https://otaxgaming.com/">Home</a></li>
 							<li><a href="https://otaxgaming.com/games">Games</a></li>
-							<li><a href="https://otaxgaming.com/movies">Movies</a></li>
+							<li><a href="https://otaxgaming.com/#">Movies</a></li>
 							<li><a href="https://otaxgaming.com/discord" class="button primary">Discord</a></li>
 						</ul>
 					</nav>
@@ -84,9 +84,9 @@
 					<div class="content">
 						<header>
 							<h2>Game Night</h2>
-							<p>Saya tak tahu nak letak subheading apa sini.</p>
+							<p>Malam yang meriah bersama orang lain!</p>
 						</header>
-						<p>Saya tak tahu nak letak isi apa sini.</p>
+						<p>Kami ada mengadakan game night yang menampilkan pelbagai jenis permainan video termasuk Among Us, Left 4 Dead 2, Insurgency: Sandstorm, Jackbox Party Pack, Dota 2, Minecraft dan lain-lain.</p>
 						<ul class="actions">
 							<li><a href="https://otaxgaming.com/games" class="button">Games</a></li>
 						</ul>
@@ -100,11 +100,13 @@
 					<div class="content">
 						<header>
 							<h2>Movie Night</h2>
-							<p>Saya pun tak tahu nak letak subheading apa sini.</p>
+							<p>Kenikmatan popcorn dikongsi bersama!</p>
 						</header>
-						<p>Saya lagi tak tahu nak letak isi apa sini. MANA GAR.</p>
+						<p>Kami juga ada mengadakan movie night mempamerkan filem yang diminta oleh komuniti. Antara filem yang pernah dipamerkan ialah Lagi Lagi Senario, Godzilla vs. Kong (2021), Dota: Dragon's Blood, Zack Snyder's Justice League, Inception dan banyak lagi.<br><br>
+						
+						(Page sedang dalam pembinaan)</p>
 						<ul class="actions">
-							<li><a href="https://otaxgaming.com/movies" class="button">Movies</a></li>
+							<li><a href="https://otaxgaming.com/#" class="button">Movies</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
