Minor color and Discord redirect changes

--- a/games.html
+++ b/games.html
@@ -35,7 +35,7 @@
 							<li><a href="https://otaxgaming.com/">Home</a></li>
 							<li><a href="https://otaxgaming.com/games">Games</a></li>
 							<li><a href="https://otaxgaming.com/#">Movies</a></li>
-							<li><a href="https://otaxgaming.com/discord" class="button primary">Discord</a></li>
+							<li><a href="https://otaxgaming.com/discord" target="_blank" class="button primary">Discord</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -45,7 +45,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>Games</h2>
-							<p>Senarai game yang dimainkan oleh komuniti boleh didapati di bawah. Beberapa game boleh diklik untuk ke page sendiri (tetapi buat waktu ni akan ke link YouTube video).</p>
+							<p>Senarai game yang dimainkan oleh komuniti boleh didapati di bawah.<br> Beberapa game boleh diklik untuk ke page sendiri.<br>(tetapi buat waktu ni akan ke link video)</p>
 						</header>
 						<div class="box alt">
 							<div class="row gtr-uniform">
@@ -87,7 +87,7 @@
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<a href="https://streamable.com/uf9q4u"><img src="images/games/logos/l4d2-logo.png" style="height: 150px;"/>
 									<h3>Left 4 Dead 2</h3></a>
-									<p>"Kalau aku tak nampak witch tu, witch tu pun tak nampak aku."</p>
+									<p>"Kalau aku tak nampak witch tu,<br>witch tu pun tak nampak aku."</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<img src="images/games/logos/valheim-logo.png" style="height: 150px;"/>
@@ -98,7 +98,7 @@
 							</div>
 						</div>
 						<footer class="major">
-							<a href="https://otaxgaming.com/discord" class="button primary">Discord</a>
+							<a href="https://otaxgaming.com/discord" target="_blank" class="button primary">Discord</a>
 						</footer>
 					</div>
 				</section>
