--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<li><a href="https://otaxgaming.com/">Home</a></li>
 							<li><a href="https://otaxgaming.com/games">Games</a></li>
 							<li><a href="https://otaxgaming.com/#">Movies</a></li>
-							<li><a href="https://otaxgaming.com/discord" class="button primary">Discord</a></li>
+							<li><a href="https://otaxgaming.com/discord" target="_blank" class="button primary">Discord</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -118,7 +118,7 @@
 						<header>
 							<h2>Berminat untuk melepak di Otax?</h2>
 							<p>Sertai Discord Otax Gaming!</p>
-							<a href="https://otaxgaming.com/discord" class="button discord">Discord</a>
+							<a href="https://otaxgaming.com/discord" target="_blank" class="button discord">Discord</a>
 						</header>
 					</div>
 				</section>
