--- a/games.html
+++ b/games.html
@@ -50,22 +50,22 @@
 						<div class="box alt">
 							<div class="row gtr-uniform">
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="https://clips.twitch.tv/ObedientCloudyPizzaDBstyle"><img src="images/games/logos/mhrise-logo.png" style="height: 150px;"/>
+									<a href="https://clips.twitch.tv/ObedientCloudyPizzaDBstyle" target="_blank"><img src="images/games/logos/mhrise-logo.png" style="height: 150px;"/>
 									<h3>Monster Hunter World/Rise</h3></a>
 									<p>"Ada segolongan orang yang menunggu Rise keluar kat PC tahun depan." - Pidot</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="https://clips.twitch.tv/BillowingDaintyWerewolfHumbleLife"><img src="images/games/logos/amongus-logo.png" style="height: 150px;"/>
+									<a href="https://clips.twitch.tv/BillowingDaintyWerewolfHumbleLife" target="_blank"><img src="images/games/logos/amongus-logo.png" style="height: 150px;"/>
 									<h3>Among Us</h3></a>
 									<p>"Menipu antara satu sama sendiri." - Pidot</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="https://clips.twitch.tv/YawningKawaiiBananaPicoMause-B2EH0XRiu9pchery"><img src="images/games/logos/insurgencysandstorm-logo.png" style="height: 100px; margin: 25px 0 25px 0;"/>
+									<a href="https://clips.twitch.tv/YawningKawaiiBananaPicoMause-B2EH0XRiu9pchery" target="_blank"><img src="images/games/logos/insurgencysandstorm-logo.png" style="height: 100px; margin: 25px 0 25px 0;"/>
 									<h3>Insurgency: Sandstorm</h3></a>
 									<p>"Siapa lagi nak bunuh kita kalau bukan kawan sendiri?" - Jack</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="https://www.twitch.tv/videos/817829004"><img src="images/games/logos/phasmophobia-logo.png" style="height: 75px; margin: 37.5px 0 37.5px 0;"/>
+									<a href="https://www.twitch.tv/videos/817829004" target="_blank"><img src="images/games/logos/phasmophobia-logo.png" style="height: 75px; margin: 37.5px 0 37.5px 0;"/>
 									<h3>Phasmophobia</h3></a>
 									<p>"Jangan risau hantu tu tak faham BM."</p>
 								</section>
@@ -75,7 +75,7 @@
 									<p>"Tujuan game ni baiki generator ke?" - Yoy</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="https://youtu.be/fa0vyRJQJow"><img src="images/games/logos/minecraft-logo.png" style="height: 75px; margin: 37.5px 0 37.5px 0;"/>
+									<a href="https://youtu.be/fa0vyRJQJow" target="_blank"><img src="images/games/logos/minecraft-logo.png" style="height: 75px; margin: 37.5px 0 37.5px 0;"/>
 									<h3>Minecraft</h3></a>
 									<p>"Jangan lupa bawa katil waktu nak ke Nether tau."</p>
 								</section>
@@ -85,7 +85,7 @@
 									<p>"Hidupkan aku Jett!"</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<a href="https://streamable.com/uf9q4u"><img src="images/games/logos/l4d2-logo.png" style="height: 150px;"/>
+									<a href="https://streamable.com/uf9q4u" target="_blank"><img src="images/games/logos/l4d2-logo.png" style="height: 150px;"/>
 									<h3>Left 4 Dead 2</h3></a>
 									<p>"Kalau aku tak nampak witch tu,<br>witch tu pun tak nampak aku."</p>
 								</section>
